<resources>
    <string name="app_name">Petmatch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_capabilities">My Settings</string>

    <!-- Strings related to user capabilities settings -->

    <string name="pref_header_general">My Capabilities</string>
    <string name="user_capabilities_title">Please fill in the following questions <b>honestly</b>.
        \nYour answers will be used to find the perfect match for you and your future pet.</string>
    <string name="user_capabilities_save_button">Save</string>

    <string name="kids_pref">Do you have kids living at home?</string>
    <string name="kids_pref_summary">
        Please tick if you have kids living at home.
    </string>

    <string name="cat_allergy_pref">Does anyone in the home have cat allergies?</string>
    <string name="cat_allergy_pref_summary">
        Please tick if anyone in the home has cat allergies.
    </string>

    <string name="dog_allergy_pref">Does anyone in the home have dog allergies?</string>
    <string name="dog_allergy_pref_summary">
        Please tick if anyone in the home has dog allergies.
    </string>

    <string name="garden_pref">Do you have any green spaces nearby?</string>
    <string name="garden_pref_summary">
        Please tick if you have a garden or there are green spaces such as parks nearby you.
    </string>

    <string name="exercise_pref">Do you have time to exercise your pet?</string>
    <string name="exercise_pref_summary">
        Please tick if you think you have time enough to exercise your future pet, such as by taking
        them on regular walks.
    </string>

    <!-- Strings related to Shelter Profile -->
    <string name="shelter_dummy_introduction">We at the Bath Cats and Dogs Home would love to help you
    find your next pet. Please contact us on the following contact details.</string>
    <string name="shelter_dummy_profile">Bath Cats and Dogs Home</string>
    <string name="shelter_dummy_picture">Picture of dog</string>
    <string name="shelter_dummy_address">Claverton Down, The Avenue, Bath BA2 7AZ</string>
    <string name="shelter_dummy_phone">01225 787321</string>
    <string name="shelter_dummy_email">rehoming@bcdh.org.uk</string>
    <string name="shelter_dummy_phone_hint">enter phone number here</string>
    <string name="shelter_dummy_address_hint">enter address here</string>
    <string name="shelter_dummy_email_hint">enter email here</string>

    <!-- Strings related to Pet Grid -->
    <string name="pet_grid_picture">This is a pet</string>
    <string name="pet_grid_title">Pet title</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_login">Sign in</string>

    <!-- My Capabilities Settings -->

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_do_you_have_children">Do you have any children living at home?</string>
    <string-array name="pref_do_you_have_children_living_at_home_titles">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="pref_do_you_have_children_living_at_home_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <string name="pref_do_you_have_any_cat_allergies">Are you allergic to cats?</string>
    <string-array name="pref_do_you_have_any_cat_allergies_titles">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="pref_do_you_have_any_cat_allergies_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <string name="pref_do_you_have_any_dog_allergies">Are you allergic to dogs?</string>
    <string-array name="pref_do_you_have_any_dog_allergies_titles">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="pref_do_you_have_any_dog_allergies_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <string name="pref_do_you_have_a_garden">Do you have a garden?</string>
    <string-array name="pref_do_you_have_a_garden_titles">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="pref_do_you_have_a_garden_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <string name="pref_how_active_are_you">Do you have time to exercise the pet?</string>
    <string-array name="pref_how_active_are_you_titles">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="pref_how_active_are_you_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings related to login -->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>