<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_do_you_own_other_cats_or_dogs_titles"
        android:entryValues="@array/pref_do_you_own_other_cats_or_dogs_values"
        android:key="key_other_pets_yes_no"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="current value is %s"
        android:title="@string/pref_do_you_have_any_other_pets" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_do_you_have_children_living_at_home_titles"
        android:entryValues="@array/pref_do_you_have_children_living_at_home_values"
        android:key="key_do_you_have_children"
        android:summary="current value is %s"
        android:title="@string/pref_title_do_you_have_children" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_do_you_have_a_garden_titles"
        android:entryValues="@array/pref_do_you_have_a_garden_values"
        android:key="key_garden_yes_no"
        android:summary="current value is %s"
        android:title="@string/pref_do_you_have_a_garden" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_how_active_are_you_titles"
        android:entryValues="@array/pref_how_active_are_you_values"
        android:key="key_how_active_are_you"
        android:summary="current value is %s"
        android:title="@string/pref_how_active_are_you" />

</PreferenceScreen>
