<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:contentDescription="@string/nav_header_desc"
        android:onClick="onLoginButtonClicked"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:visibility="visible"
        app:srcCompat="@mipmap/login_button_foreground" />

    <ImageView
        android:id="@+id/logoutButton"
        android:onClick="onLogoutButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:visibility="gone"
        app:srcCompat="@mipmap/login_button_round" />

    <TextView
        android:id="@+id/loggedUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="gone" />

    <TextView
        android:id="@+id/loggedUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:visibility="gone" />

</LinearLayout>
